# State-Space-Systems-with-linear-readouts

./: .gitignore  README.md  db.sqlite3  dynamical_systems.py  generate_data_lorenz.py  lorenz_optuna.py  model_embeddings.py  model_predict.py  other_random_bits_of_code.py  predict_model.py  pyproject.toml  train_model.py
lorenz/: config.py
lorenz/fig/: data.eps
lorenz/models/: ESN_model__reservoir_size_10.net  ESN_model__reservoir_size_100.net  ESN_model__reservoir_size_200.net  ESN_model__reservoir_size_50.net  ESN_model__reservoir_size_500.net  RCN_model__reservoir_size_512.net  RCN_model__training_loss.npy
lorenz/test/: data.npz  input_data.npy  output_data.npy
lorenz/validate/: data.npz  input_data.npy  output_data.npy
utils/: datasets.py  dynamical_systems.py  measures.py  model.py
