[project]
name = "learning_the_climate_with_state_space_systems"
description = "."
version = "0.1"
requires-python = ">=3.12"

dependencies = [
    "matplotlib==3.8.3",
    "numpy==1.26.4",
    "optuna==4.5.0",
    "scikit-learn==1.7.1",
    "scipy==1.12.0",
    "seaborn==0.13.2",
    "torch==2.8.0"
]